--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,8 @@
+{erl_opts, [
+  {parse_transform, lager_transform}
+]}.
 {deps, [
+  {lager, ".*", {git, "https://github.com/basho/lager", "master"}},
   {esqlite, ".*", {git, "https://github.com/emedia-project/esqlite", "master"}}
 ]}.
 
