--- a/rebar.config
+++ b/rebar.config
@@ -3,6 +3,7 @@
 ]}.
 {deps, [
   {lager, ".*", {git, "https://github.com/basho/lager", "master"}},
+  {eutils, ".*", {git, "https://github.com/emedia-project/eutils", "master"}},
   {esqlite, ".*", {git, "https://github.com/emedia-project/esqlite", "master"}}
 ]}.
 
