--- a/rebar.config
+++ b/rebar.config
@@ -2,8 +2,8 @@
   {parse_transform, lager_transform}
 ]}.
 {deps, [
-  {lager, ".*", {git, "https://github.com/basho/lager", "master"}},
-  {eutils, ".*", {git, "https://github.com/emedia-project/eutils", "master"}},
-  {esqlite, ".*", {git, "https://github.com/emedia-project/esqlite", "master"}}
+  {lager, ".*", {git, "https://github.com/basho/lager.git", {branch, "master"}}},
+  {eutils, ".*", {git, "https://github.com/emedia-project/eutils.git", {branch, "master"}}},
+  {esqlite, ".*", {git, "https://github.com/mmzeeman/esqlite.git", {branch, "master"}}}
 ]}.
 
